--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>PayPal Dashboard Clone</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <link href="https://fonts.googleapis.com/css2?family=Helvetica&display=swap" rel="stylesheet">
   <style>
     body {
       font-family: 'Helvetica', sans-serif;
@@ -13,20 +12,20 @@
     }
   </style>
 </head>
-<body class="pb-28">
+<body class="pb-28 max-w-md mx-auto">
 
   <!-- Top Profile -->
-  <div class="pt-6 px-4 flex items-center">
-    <img src="your-profile.jpg" alt="Profile" class="h-9 w-9 rounded-full" />
+  <div class="mt-4 px-4 flex items-center">
+    <img src="your-profile.jpg" alt="Profile" class="h-10 w-10 rounded-full" />
   </div>
 
   <!-- Balance Box -->
-  <div class="bg-white rounded-2xl p-4 mt-4 mx-4 flex items-center shadow space-x-4">
-    <div class="h-8 w-8 rounded-full bg-[#eceff5] flex items-center justify-center">
-      <img src="https://www.paypalobjects.com/webstatic/icon/pp258.png" class="h-4" />
+  <div class="bg-white rounded-2xl p-4 mt-4 mx-4 flex items-center shadow-md space-x-4">
+    <div class="bg-[#0070ba] rounded-full p-2">
+      <img src="https://www.paypalobjects.com/webstatic/icon/pp258.png" class="h-6 w-6" />
     </div>
     <div>
-      <p class="text-[22px] font-bold tracking-tight">US$0.13</p>
+      <p class="text-[22px] font-bold">US$0.13</p>
       <p class="text-gray-500 text-sm">PayPal balance</p>
     </div>
   </div>
@@ -34,8 +33,8 @@
   <!-- Send Payments -->
   <div class="mt-6 mx-4">
     <h2 class="text-lg font-bold mb-2">Send Payments</h2>
-    <div class="bg-white rounded-2xl p-4 flex items-start space-x-4">
-      <img src="https://cdn-icons-png.flaticon.com/512/1828/1828490.png" alt="Pay Icon" class="h-10 w-10">
+    <div class="bg-white rounded-2xl p-4 flex items-start space-x-3">
+      <img src="https://cdn-icons-png.flaticon.com/512/1828/1828490.png" alt="Pay Icon" class="h-8 w-8">
       <div>
         <p class="font-semibold">Pay From Your Phone</p>
         <p class="text-sm text-gray-600">For the things you love.</p>
@@ -46,40 +45,47 @@
 
   <!-- Transactions -->
   <div class="mt-6 space-y-2 px-4">
+    <!-- Transaction Card -->
     <div class="bg-white rounded-xl p-4 flex justify-between items-center">
-      <div class="flex items-start space-x-4">
+      <div class="flex items-center space-x-3">
         <img src="images.png" class="h-9 w-9 rounded-full">
         <div>
           <p class="font-bold">PrankTexts.com</p>
           <p class="text-sm text-gray-500">27 Apr</p>
-          <p class="text-sm text-gray-500">Payment</p>
         </div>
       </div>
-      <p class="font-bold">-US$1</p>
+      <div class="text-right">
+        <p class="font-bold">-US$1</p>
+        <p class="text-sm text-gray-500">Payment</p>
+      </div>
     </div>
 
     <div class="bg-white rounded-xl p-4 flex justify-between items-center">
-      <div class="flex items-start space-x-4">
+      <div class="flex items-center space-x-3">
         <img src="images.png" class="h-9 w-9 rounded-full">
         <div>
           <p class="font-bold">THUNES</p>
           <p class="text-sm text-gray-500">27 Apr</p>
-          <p class="text-sm text-gray-500">Payment received</p>
         </div>
       </div>
-      <p class="text-green-600 font-bold">+US$1.13</p>
+      <div class="text-right">
+        <p class="text-green-600 font-bold">+US$1.13</p>
+        <p class="text-sm text-gray-500">Payment received</p>
+      </div>
     </div>
 
     <div class="bg-white rounded-xl p-4 flex justify-between items-center">
-      <div class="flex items-start space-x-4">
+      <div class="flex items-center space-x-3">
         <img src="images.png" class="h-9 w-9 rounded-full">
         <div>
           <p class="font-bold">THUNES</p>
           <p class="text-sm text-gray-500">18 Apr</p>
-          <p class="text-sm text-gray-500">Payment</p>
         </div>
       </div>
-      <p class="font-bold">-US$1.49</p>
+      <div class="text-right">
+        <p class="font-bold">-US$1.49</p>
+        <p class="text-sm text-gray-500">Payment</p>
+      </div>
     </div>
   </div>
 
@@ -90,21 +96,19 @@
   </div>
 
   <!-- Bottom Navigation -->
-  <nav class="fixed bottom-0 w-full bg-white border-t py-2 px-4">
-    <div class="flex justify-center items-center gap-x-8">
-      <a href="#" class="flex flex-col items-center">
-        <img src="https://cdn-icons-png.flaticon.com/512/1946/1946433.png" class="h-5 w-5" />
-        <span class="text-xs font-medium mt-1">Home</span>
-      </a>
-      <a href="#" class="flex flex-col items-center">
-        <img src="https://cdn-icons-png.flaticon.com/512/591/591574.png" class="h-5 w-5" />
-        <span class="text-xs font-medium mt-1">Payments</span>
-      </a>
-      <a href="#" class="flex flex-col items-center">
-        <img src="https://cdn-icons-png.flaticon.com/512/254/254638.png" class="h-5 w-5" />
-        <span class="text-xs font-medium mt-1">Wallet</span>
-      </a>
-    </div>
+  <nav class="fixed bottom-0 w-full max-w-md mx-auto bg-white border-t px-6 py-1.5 flex justify-evenly items-center">
+    <a href="#" class="flex flex-col items-center text-gray-700">
+      <img src="https://cdn-icons-png.flaticon.com/512/1946/1946433.png" class="h-5 w-5" />
+      <span class="text-[11px] mt-0.5">Home</span>
+    </a>
+    <a href="#" class="flex flex-col items-center text-gray-700">
+      <img src="https://cdn-icons-png.flaticon.com/512/591/591574.png" class="h-5 w-5" />
+      <span class="text-[11px] mt-0.5">Payments</span>
+    </a>
+    <a href="#" class="flex flex-col items-center text-gray-700">
+      <img src="https://cdn-icons-png.flaticon.com/512/254/254638.png" class="h-5 w-5" />
+      <span class="text-[11px] mt-0.5">Wallet</span>
+    </a>
   </nav>
 
 </body>
