--- a/index.html
+++ b/index.html
@@ -46,43 +46,37 @@
   <!-- Transactions Section -->
   <div class="mt-6 space-y-3 px-4">
     <!-- Transaction Item -->
-    <div class="bg-white rounded-xl p-4 flex items-center justify-between">
-      <div class="flex items-center space-x-4">
-        <div class="relative">
-          <img src="images.png" class="h-10 w-10 rounded-full" />
-          <p class="absolute bottom-[-12px] text-[10px] text-gray-500 text-center left-1/2 -translate-x-1/2 w-max">Payment</p>
-        </div>
-        <div class="pt-2">
-          <p class="font-semibold text-sm">PrankTexts.com</p>
+    <div class="bg-white rounded-xl px-4 py-5 flex items-center justify-between">
+      <div class="flex items-center space-x-3">
+        <img src="images.png" class="h-8 w-8 rounded-full" />
+        <div>
+          <p class="text-sm font-semibold">PrankTexts.com</p>
           <p class="text-xs text-gray-500">27 Apr</p>
+          <p class="text-xs text-gray-500">Payment</p>
         </div>
       </div>
       <p class="font-bold text-sm">-US$1</p>
     </div>
 
-    <div class="bg-white rounded-xl p-4 flex items-center justify-between">
-      <div class="flex items-center space-x-4">
-        <div class="relative">
-          <img src="images.png" class="h-10 w-10 rounded-full" />
-          <p class="absolute bottom-[-12px] text-[10px] text-gray-500 text-center left-1/2 -translate-x-1/2 w-max">Payment received</p>
-        </div>
-        <div class="pt-2">
-          <p class="font-semibold text-sm">THUNES</p>
+    <div class="bg-white rounded-xl px-4 py-5 flex items-center justify-between">
+      <div class="flex items-center space-x-3">
+        <img src="images.png" class="h-8 w-8 rounded-full" />
+        <div>
+          <p class="text-sm font-semibold">THUNES</p>
           <p class="text-xs text-gray-500">27 Apr</p>
+          <p class="text-xs text-gray-500">Payment received</p>
         </div>
       </div>
       <p class="font-bold text-sm text-green-600">+US$1.13</p>
     </div>
 
-    <div class="bg-white rounded-xl p-4 flex items-center justify-between">
-      <div class="flex items-center space-x-4">
-        <div class="relative">
-          <img src="images.png" class="h-10 w-10 rounded-full" />
-          <p class="absolute bottom-[-12px] text-[10px] text-gray-500 text-center left-1/2 -translate-x-1/2 w-max">Payment</p>
-        </div>
-        <div class="pt-2">
-          <p class="font-semibold text-sm">THUNES</p>
+    <div class="bg-white rounded-xl px-4 py-5 flex items-center justify-between">
+      <div class="flex items-center space-x-3">
+        <img src="images.png" class="h-8 w-8 rounded-full" />
+        <div>
+          <p class="text-sm font-semibold">THUNES</p>
           <p class="text-xs text-gray-500">18 Apr</p>
+          <p class="text-xs text-gray-500">Payment</p>
         </div>
       </div>
       <p class="font-bold text-sm">-US$1.49</p>
